@@ -1,1 +1,15 @@
 # OOPLibrarySystem_TeamNerd
+
+## Requirements
+
+- Java SDK 22  
+- JavaFX SDK 17.0 (tested with 17.0.15)  
+
+Make sure both Java SDK and JavaFX SDK are installed on your system.
+
+## How to Run
+
+Run the application jar using the following command (adjust the path to your JavaFX SDK accordingly):
+
+```bash
+java --module-path path/to/javafx-sdk-17.0.15/lib --add-modules javafx.controls,javafx.fxml -jar v1.0.0.jar
